--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <br><br>
     Image to analyze:
     <input type="text" name="inputImage" id="inputImage"
-        value="http://upload.wikimedia.org/wikipedia/commons/3/3c/Shaki_waterfall.jpg" />
+        value="https://wilhamnewapp.blob.core.windows.net/wilhamcontainer/bucket-list-mt-cook-new-zealand-7.jpg" />
     <button onclick="processImage()">Analyze image</button>
     <br><br>
     <div id="wrapper" style="width:1020px; display:table;">
