--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
      
             // Request parameters.
             var params = {
-                "visualFeatures": "Categories,Description,Color",
+                "visualFeatures": "Categories,Description,Tags",
                 "details": "",
                 "language": "en",
             };
