--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
      
             .done(function(data) {
                 // Show formatted JSON on webpage.
-                $("#responseTextArea").val(JSON.stringify(data, null, data));
+                $("#responseTextArea").val(JSON.stringify(data, null, 2));
             })
      
             .fail(function(jqXHR, textStatus, errorThrown) {
